<resources>

    <string name="app_name">色香味</string>
    <string name="welcome_tips">欢迎使用</string>
    <string name="changeColor">变色模式</string>
    <string name="nightMode">夜间模式</string>
    <string name="privateSpace">私人空间</string>
    <string name="searchMusics">搜索本地歌曲</string>
    <string name="musicResource">资源仓库</string>
    <string name="musicSetting">设置</string>
    <string name="musicExit">退出</string>
    <string name="localMusic">本地音乐</string>
    <string name="musicHistory">最近听过</string>
    <string name="musicUpload">上传到云</string>
    <string name="musicPrivate">私密仓库</string>
</resources>
