<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorred"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/iconPlayer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/icon_player_shape"
            android:src="@mipmap/icon_monkey"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:id="@+id/changeColor"
        style="@style/leftMenuItem"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/mnu1"
            style="@style/imageItem"
            android:src="@mipmap/icon_monkey"
            />
        <TextView
            style="@style/TestxtviewItem"
            android:text="@string/changeColor"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"/>
    <LinearLayout
      android:id="@+id/nightmode"
        style="@style/leftMenuItem"

        android:orientation="horizontal">
        <ImageView
            android:id="@+id/mnu2"
            style="@style/imageItem"
            android:src="@mipmap/icon_monkey"
            />
        <TextView
            style="@style/TestxtviewItem"
            android:text="@string/nightMode"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:id="@+id/privateSpace"
        style="@style/leftMenuItem"

        android:orientation="horizontal">
        <ImageView
            android:id="@+id/mnu3"
            style="@style/imageItem"
            android:src="@mipmap/icon_monkey"
            />
        <TextView
            style="@style/TestxtviewItem"
            android:text="@string/privateSpace"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:id="@+id/searchMusics"
        style="@style/leftMenuItem"

        android:orientation="horizontal">
        <ImageView
            android:id="@+id/mnu4"
            style="@style/imageItem"
            android:src="@mipmap/icon_monkey"
            />
        <TextView
            style="@style/TestxtviewItem"
            android:text="@string/searchMusics"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:id="@+id/musicResource"
        style="@style/leftMenuItem"

        android:orientation="horizontal">
        <ImageView
            android:id="@+id/mnu5"
            style="@style/imageItem"
            android:src="@mipmap/icon_monkey"
            />
        <TextView
            style="@style/TestxtviewItem"
            android:text="@string/musicResource"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:id="@+id/moreSetting"
       style="@style/leftMenuItem"
        android:gravity="bottom"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/mSetting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/musicSetting"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_weight="1"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/mexit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/musicExit"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
</LinearLayout>